# easy-mail-sender

./: README.md  pyproject.toml
tests/: test_mail.py
