[project]
name = "easy-mail-sender"
dynamic = ["version"]
description = "A quick mail sender"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = ["python-dotenv>=1.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "file"
path = "src/easy_mail_sender/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
